--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>🎮 Угадай код | Игра</title>
+    <title>🎮 Randin challenge</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
@@ -167,7 +167,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1><i class="fas fa-lock"></i> Угадай код</h1>
+            <h1><i class="fas fa-lock"></i> Угадай секретный код</h1>
             <p>Введите ваш Discord ник и код для участия в игре</p>
         </div>
         
@@ -179,7 +179,7 @@
                     <input 
                         type="text" 
                         id="nickname" 
-                        placeholder="Например: GamerPro#1234"
+                        placeholder="Например: GamerPro"
                     >
                 </div>
             </div>
