--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
     
     <div class="container">
         <div class="header">
-            <h2>Randin Challenge</h2>
+            <h2>RandinLonescu Event</h2>
             <p>Введи найденый код, чтобы выиграть розыгрыш</p>
         </div>
         
